--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql">DATA CLEANING IN SQL</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image fit"><img src="images/.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
