--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 										
 										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql">DATA CLEANING IN SQL</a></h2>
 									</header>
-									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image fit"><img src="images/.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image fit"><img src="images/housing.jpg" alt="" /></a>
+									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="button">View Project</a></li>
 									</ul>
