--- a/index.html
+++ b/index.html
@@ -75,13 +75,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx">Bike Sales Dashboard</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="image fit"><img src="images/bikes.jpg" alt="" /></a>
+									<p>In this project we create an interactive dashboard using Excel where we look at the bike purchase pattern based on customer age bracket, their average income and commute distance</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
