--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx">Bike Sales Dashboard</h2>
 									</header>
 									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="image fit"><img src="images/bikes.jpg" alt="" /></a>
-									<p>In this project we create an interactive dashboard using Excel where we look at the bike purchase pattern based on customer age bracket, their average income and commute distance</p>
+									<p>In this project we create an interactive dashboard using Excel where we look at the bike purchase pattern based on customer age bracket, their average income and commute distance.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="button">View Project</a></li>
 									</ul>
