--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql">DATA CLEANING IN SQL</a></h2>
 									</header>
 									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="image fit"><img src="images\housing.jpg" alt="" /></a>
-									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
+									<p>In this project I took raw housing data and transformed it in SQL Server to make it more usable for analysis.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Cleaning%20Portfolio%20Project%20Queries.sql" class="button">View Project</a></li>
 									</ul>
@@ -78,21 +78,20 @@
 										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx">Bike Sales Dashboard</h2>
 									</header>
 									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="image fit"><img src="images/bikes.jpg" alt="" /></a>
-									<p>In this project we create an interactive dashboard using Excel where we look at the bike purchase pattern based on customer age bracket, their average income and commute distance.</p>
+									<p>I created an interactive dashboard using Excel where we can look at the bike purchase pattern based on customer age bracket, their average income and commute distance.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Bike%20Sales%20Dashboard.xlsx" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										
+										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb">Amazon Web Scraper</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" class="image fit"><img src="images/amazon_logo.jpg" alt="" /></a>
+									<p>Developed a tool to automate the extraction of product data such as prices, reviews, and ratings from Amazon's website. This data can then be used for various purposes, including market analysis and price comparison.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
