--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
 										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<!--
+								
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										
+										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbix">Data Professional Survey</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbix" class="image fit"><img src="images/Data.jpg" alt="" /></a>
+									<p>Created an interactive Power BI dashboard analysing survey data from data professionals to visualize key insights, such as trends, tools, and career satisfaction.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbix" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<!--
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
