--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Ashrith's Portfolio</h1>
-						<p>I possess a strong foundation in data analytics tools and methodologies, including SQL, Python, Power BI and MS Excel. <br><a href="https://www.linkedin.com/in/ashrithsd/">@Ashrith S D</a></p>
+						<p>I possess a strong understanding of data analytics tools and methodologies, including SQL, Python, Power BI and MS Excel. <br><a href="https://www.linkedin.com/in/ashrithsd/">@Ashrith S D</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -101,7 +101,7 @@
 										<h2><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbix">Data Professional Survey</a></h2>
 									</header>
 									<a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbix" class="image fit"><img src="images/Data.jpg" alt="" /></a>
-									<p>Created an interactive Power BI dashboard analysing survey data from data professionals to visualize key insights, such as trends, tools, and career satisfaction.</p>
+									<p>Created an interactive Power BI dashboard analyzing survey data from data professionals to visualize key insights, such as trends, tools, and career satisfaction.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AshrithSD/Portfolio_Projects/blob/main/Data%20Professional%20Survey%20Breakdown.pbix" class="button">View Project</a></li>
 									</ul>
